[package]
name = "apsisd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = "0.10.1"
blake2b_simd = "1.0.3"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
clap-verbosity-flag = { git = "https://github.com/joshka/clap-verbosity-flag", branch = "jm/serde", features = ["serde"] } # TODO Revisit when PR is merged
directories = "6.0.0"
eris-rs = "1.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
figment_file_provider_adapter = "0.1.1"
mainline = "5.4.0"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["reqwest-rustls"] }
opentelemetry_sdk = "0.30.0"
rand = "0.9.2"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
reqwest = { version = "0.12.23", features = ["blocking", "rustls-tls"] }
rocksdb = "0.24.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
subtle = "2.6.1"
thiserror = "2.0.16"
thiserror-ext = "0.3.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
axum-test = "18.1.0"
